--- a/src/vigilo/themes/templates/vigimap/widget_images.html
+++ b/src/vigilo/themes/templates/vigimap/widget_images.html
@@ -1,10 +1,11 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <ul class="image_widget">
-        <li><a href="" onclick="set_image(null, '${receptId}'); return false;" class="noimage">no image</a></li>
+    <ul class="imagepicker-popup">
+        <li><a href="#" class="noimage">no image</a></li>
         <li py:for="image in images">
-            <img src="${tg.url('/images/%s/%s.png' % (folder,image))}"
-                 alt="${image}" title="${image}"
-                 onclick="set_image('${image}', '${receptId}');" />
+            <a href="#" title="${image}">
+                <img src="${tg.url('/images/%s/%s.png' % (folder,image))}"
+                     alt="${image}" name="${image}"/>
+            </a>
         </li>
     </ul>
 </div>
