Légère mise à jour des templates et styles de VigiMap (pour afficher les champs obligatoires dans les formulaires de VigiMap en rouge).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3283 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -11,6 +11,7 @@
     <!--<script type="text/javascript" src="${tg.url('/js/MainEdit.js')}"></script>-->
 
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/Autocompleter.css')}" />
+    <link rel="stylesheet" type="text/css" href="${tg.url('/css/edition.css')}" />
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Local.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/Autocompleter.Request.js')}"></script>
