--- a/src/vigilo/themes/templates/vigimap/link_form.html
+++ b/src/vigilo/themes/templates/vigimap/link_form.html
@@ -1,6 +1,3 @@
-<div xmlns:py="http://genshi.edgewall.org/">
-    <fieldset>
-    ${link_form(kw, onsubmit=onsubmit)}
-    </fieldset>
-
+<div xmlns:py="http://genshi.edgewall.org/" py:strip="">
+${link_form(kw, onsubmit=onsubmit)}
 </div>
