Vrai commentaire pour l'info sur le code python... Les visiteurs de VigiMap n'ont pas besoin de savoir comment/pourquoi les appels de fonctions sont faits.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3294 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -40,7 +40,7 @@
 
     ${map()}
 
-    <!-- L'apppel des deux fonctions suivantes (empty...) provoque l'injection dans la page html,
+    <!--! L'apppel des deux fonctions suivantes (empty...) provoque l'injection dans la page html,
          des scripts javascript nécessaires à l'utilisation des toscawidgets dynforms dans une
          boîte de dialogue, elles n'ont en revanche aucune influence au niveau de l'apparence de
          la page html-->
