Utilisation de tg.url() sur les liens dans le dialogue d'infos d'un nœud (évite d'avoir à saisir des URL absolues).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3300 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -8,7 +8,7 @@
     <h2 py:if="links">Links</h2>
     <ul class="section links" py:if="links">
         <li py:for="link in links">
-            <a href="${link[1]}" > ${link[0]}</a>    
+            <a href="${tg.url(link[1])}" > ${link[0]}</a>    
         </li>
     </ul>
     <h2 py:if="maps">Submaps</h2>
