Inclure le numéro de version de l'appli dans la page web
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3358 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -10,6 +10,8 @@
 <py:match path="head" once="true">
 <head py:attrs="select('@*|py:with')">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
+    <meta name="version" content="${tg.config.get('version')}" />
+
     <title py:replace="''">Your title goes here</title>
     <meta py:replace="select('*')"/>
     <style type="text/css">@import "${tg.url('css/reset.css')}";</style>
