--- a/src/vigilo/themes/templates/vigicore/master.html
+++ b/src/vigilo/themes/templates/vigicore/master.html
@@ -8,6 +8,8 @@
     <xi:include href="footer.html" />
 <head py:match="head" py:attrs="select('@*')">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
+    <meta name="version" content="${tg.config.get('version')}" />
+
     <title py:replace="''">Your title goes here</title>
     <meta py:replace="select('*')"/>
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
