--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -9,18 +9,33 @@
 
     <body class='main'>
         <h2>${l_('List of graphs for "%s"') % host}</h2>
-        <a href="${tg.url('/nagios/%s/cgi-bin/status.cgi?host=%s' % (host, host))}">${l_('Monitoring page for "%s"') % host}</a>
+        <a href="${tg.url('/nagios/%s/cgi-bin/status.cgi' % host, {
+            'host_': host,
+        })}">${l_('Monitoring page for "%s"') % host}</a>
         <div py:for="h in presets" py:strip="True">
-            <a href="fullHostPage?host=${host};duration=${h['duration']}">${h['caption']}</a>
+            <a href="${tg.url('/rpc/fullHostPage', {
+                'host_': host,
+                'duration': h['duration'],
+            })}">${h['caption']}</a>
         </div>
         <br />
         <div py:for="graph in graphs" py:strip="True">
-            <a href="singleGraph?host=${host};graph=${graph.name};start=${start};duration=${duration}">
-            <img src="${tg.url('/rrdgraph/%(host)s/index?graphtemplate=%(graph)s&amp;start=%(start)d&amp;duration=%(duration)d&amp;direct=1&amp;details=0&amp;host=%(host)s' % {
-                'host': host,
+            <a href="${tg.url('/rpc/singleGraph', {
+                'host_': host,
                 'graph': graph.name,
                 'start': start,
                 'duration': duration,
+            })}">
+            <img alt="${l_('Graph \'%(graph)s\' on \'%(host)s\'') % {
+                    'host': host,
+                    'graph': graph.name,
+                }}" src="${tg.url('/rrdgraph/%s/index' % host, {
+                'host_': host,
+                'graphtemplate': graph.name,
+                'start': start,
+                'duration': duration,
+                'direct': 1,
+                'details': 0,
             })}"/>
             </a>
         </div>
