1er jet pour représenter les groupes d'éléments supervisés sous forme d'arbre dans VigiBoard (formulaire de recherche). Améliorations possibles : icônes plus jolies/pertinentes, chargement dynamique des sous-groupes. Légères modifications dans la manière dont le formulaire de recherche est généré, afin de propager automatiquement les anciennes valeur de recherche dans le formulaire lorsqu'il est réaffiché.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3600 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -50,7 +50,7 @@
 
         window.edit_dialog.addEvent('close', remove_selection);
 
-        // Ajoute événement pour sélection multiple.
+        // Ajoute les événements pour la sélection multiple.
         $$('Edit_All').addEvent('click', function () {
             var nb_events = $$$$('.Edit_EventsCheckBox').filter(
                 function (e) { return e.get('checked'); }
