--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -29,6 +29,7 @@
 
     <link py:replace="select('link|head/script|style')" />
 
+    <script type="text/javascript">var app_path = "${tg.url('/').encode('backslash')}";</script>
     <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/jxlib.js')}"></script>
@@ -37,6 +38,8 @@
     <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.Request.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/Autocompleter/Observer.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/Autocompleter/vigilo.js')}"></script>
+
+    <script type="text/javascript" src="${tg.url('/js/tree.js')}"></script>
 </head>
 </py:match>
 
@@ -51,17 +54,18 @@ ${toolbar()}
 </py:with>
 
 <div style="display: none">
-    ${tmpl_context.search_form(
+    ${search_form(
+        search,
         child_args=dict(
             from_date=dict(
-                date_format=tmpl_context.calendar_date_format,
-                calendar_lang=tmpl_context.calendar_lang
+                date_format=l_('%Y-%m-%d %I:%M:%S %p'),
+                calendar_lang=get_calendar_lang(),
             ),
             to_date=dict(
-                date_format=tmpl_context.calendar_date_format,
-                calendar_lang=tmpl_context.calendar_lang
-            )
-        )
+                date_format=l_('%Y-%m-%d %I:%M:%S %p'),
+                calendar_lang=get_calendar_lang(),
+            ),
+        ),
     )}
 </div>
 
