Légère amélioration de l'arbre des groupes pour afficher les éléments par ordre alphabétique.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3604 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -196,6 +196,10 @@ div.clearingdiv {
     margin: 0 auto;
 }
 
+#search_form #search_form_supitemgroup\2E ui {
+    width: 59%;
+}
+
 #search_mode_tip {
     margin-top: 7px;
 }
