Ajout d'une petite note pour expliquer le pourquoi du comment.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3674 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -196,6 +196,8 @@ div.clearingdiv {
     margin: 0 auto;
 }
 
+/* "\2E " permet d'échapper le point.
+ * La séquence devrait être reconnue par tous les navigateurs. */
 #search_form #search_form_supitemgroup\2E ui {
     width: 59%;
 }
