Fusion des modifications faites dans la branche users/fpoirott/vigimap_events : - programmation davantage basée sur les événements (#119) - correction d'une duplication des éléments après édition (#121) - intégration de premiers éléments pour la gestion des groupes de cartes (#69) - masquage des options pour le canal alpha (opacité) dans la palette de couleurs - ajout d'un bouton "Clear" pour supprimer la couleur sélectionnée par la palette
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3734 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -27,10 +27,12 @@
 
     <script type="text/javascript" src="${tg.url('/js/main.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/loader.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/legend.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/canvas.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/treemap.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mapElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/ServiceElement.js')}"></script>
 
