--- a/src/vigilo/themes/public/vigimap/css/edition.css
+++ b/src/vigilo/themes/public/vigimap/css/edition.css
@@ -2,3 +2,11 @@ label.required {
     color: red;
 }
 
+#map_form_background_color {
+    width: 53%;
+}
+
+.jxAlphaLabel, .jxAlphaInput {
+    display: none;
+}
+
