--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -7,13 +7,13 @@
         -->
         <h3>${l_("Elements")} <span></span></h3>
         <dl>
-            <dt class="status-unknown"></dt>
+            <dt class="status-unknown">?</dt>
                 <dd>${l_("Unknown")}</dd>
-            <dt class="status-ok"></dt>
+            <dt class="status-ok">?</dt>
                 <dd>${l_("OK")}</dd>
-            <dt class="status-warning"></dt>
+            <dt class="status-warning">?</dt>
                 <dd>${l_("Warning")}</dd>
-            <dt class="status-critical"></dt>
+            <dt class="status-critical">?</dt>
                 <dd>${l_("Critical")}</dd>
         </dl>
     </div>
@@ -27,15 +27,15 @@
             <div py:for="i, link in enumerate(links)" py:strip="True">
                 <div py:choose="" py:strip="True">
                     <p py:when="i == 0" py:strip="True">
-                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}">?</dt>
                         <dd>${link.t_min}</dd>
                     </p>
                     <p py:when="i == len(links) - 1" py:strip="True">
-                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}">?</dt>
                         <dd>&#8805; ${link.t_min}</dd>
                     </p>
                     <p py:otherwise="" py:strip="True">
-                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}">?</dt>
                         <dd>${link.t_min} &#8594; ${link.t_max}</dd>
                     </p>
                 </div>
