Ajout d'un délai de rafraichissement par défaut dans VigiBoard.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3943 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -42,7 +42,7 @@
         Refresh every
         <select id="refresh_time" class="header_select" onchange="change_refresh($('refresh_time').get('value'));">
             <py:for each="(delay, label) in refresh_times"
-                py:with="refresh_time = tg.session.get('refresh', 0)">
+                py:with="refresh_time = tg.session.get('refresh', int(tg.config.get('default_refresh', 0)))">
             <option py:if="refresh_time == delay" value="${delay}" selected="selected">${label}</option>
             <option py:if="refresh_time != delay" value="${delay}">${label}</option>
             </py:for>
