Modification de la présentation des compteurs dans la légende de VigiMap pour faciliter la lecture par des malvoyants.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3947 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -315,7 +315,7 @@ canvas {
     position: fixed;
     bottom: 0.5em;
     right: 0.5em;
-    width: 10em;
+    width: 11em;
     z-index: 99;
 }
 
@@ -366,6 +366,10 @@ canvas {
     border: 1px solid transparent;
 }
 
+#legend dl > dd > span {
+    float: right;
+    font-weight: bold;
+}
 
 /*
  * Mode édition
