Mise à jour du copyleft.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4068 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/common/footer.html
+++ b/src/vigilo/themes/templates/common/footer.html
@@ -2,13 +2,13 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
 <py:def function="footer">
-<div id="footer"> 
+<div id="footer">
   <div class="foottext">
-    <!--! XXX Corriger les infos de copyright -->
+    <!--! @XXX Corriger les infos de copyright -->
     <p>Vigilo is an open-source monitoring solution designed for large-scale
-        system and network management. Copyright © ????-2009 </p>
+        system and network management. Copyright © ????-2010 </p>
   </div>
   <div class="clearingdiv"></div>
 </div>
-</py:def>    
+</py:def>
 </html>
