--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
                     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:py="http://genshi.edgewall.org/"
@@ -13,22 +13,18 @@
 <head>
     <py:choose>
         <title py:when="hostname and servicename">
-            VigiBoard - ${l_('History for event #%(idevent)d on host "%(hostname)s" and service "%(servicename)s"') % {
+            VigiBoard - ${l_('History for a raw event on host "%(hostname)s" and service "%(servicename)s"') % {
                 'hostname': hostname,
                 'servicename': servicename,
-                'idevent': idevent,
             }}
         </title>
         <title py:when="hostname">
-            VigiBoard - ${l_('History for event #%(idevent)d on host "%(hostname)s"') % {
+            VigiBoard - ${l_('History for a raw event on host "%(hostname)s"') % {
                 'hostname': hostname,
-                'idevent': idevent,
             }}
         </title>
         <title py:otherwise="">
-            VigiBoard - ${l_('History for event #%(idevent)d') % {
-                'idevent': idevent,
-            }}
+            VigiBoard - ${l_('History for a raw event')}
         </title>
     </py:choose>
 </head>
@@ -38,7 +34,7 @@
 		<thead>
 	        <tr>
 	            <th colspan="5">
-	            
+
 	            	<div class="navigation_arrow left_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
@@ -47,7 +43,7 @@
 					     --></a>
 					    </py:choose>
 					</div>
-				    
+
 	            	<div class="navigation_arrow right_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
@@ -56,33 +52,29 @@
 					     --></a>
 				    	</py:choose>
 					</div>
-				    
+
 		          	<div class="table_title">
 		          	    <py:choose>
                             <span py:when="hostname and servicename">
-                                ${l_('History for event #%(idevent)d on host "%(hostname)s" and service "%(servicename)s"') % {
+                                ${l_('History for a raw event on host "%(hostname)s" and service "%(servicename)s"') % {
                                     'hostname': hostname,
                                     'servicename': servicename,
-                                    'idevent': idevent,
                                 }}
                             </span>
                             <span py:when="hostname">
-                                ${l_('History for event #%(idevent)d on host "%(hostname)s"') % {
+                                ${l_('History for a raw event on host "%(hostname)s"') % {
                                     'hostname': hostname,
-                                    'idevent': idevent,
                                 }}
                             </span>
                             <span py:otherwise="">
-                                ${l_('History for event #%(idevent)d') % {
-                                    'idevent': idevent,
-                                }}
+                                ${l_('History for a raw event')}
                             </span>
                         </py:choose>
 				    </div>
-				    
+
 	            </th>
 	        </tr>
-	
+
 			<tr class="plugins">
                 <th id="plugin_date" class="plugin_date">Date<br />[Duration]</th>
                 <th id="plugin_user" class="plugin_user">User</th>
@@ -94,7 +86,7 @@
 		<tfoot>
 	        <tr>
 	            <th colspan="5">
-	            
+
 		            <div class="navigation_arrow left_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
@@ -103,7 +95,7 @@
 					     --></a>
 					    </py:choose>
 		            </div>
-	
+
 		            <div class="navigation_arrow right_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
@@ -112,13 +104,13 @@
 					     --></a>
 					    </py:choose>
 					</div>
-		            
+
 	          	    <py:choose>
 		            	<div py:when="nb_pages > 1" class="pagination">
 		            		<span>
 				          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
 			          		    <br/>
-					            Pages 
+					            Pages
 					            <py:for each="p in range(1, nb_pages + 1)">
 					                <a py:if="p != page" href="${tg.url('/event/%d/%d' % (idevent, p))}" py:content="p" />
 					                <span py:if="p == page" py:replace="p" />
@@ -131,16 +123,16 @@
 		          			</span>
 				        </div>
 	            	</py:choose>
-					
+
 	            </th>
 	        </tr>
 		</tfoot>
-	
+
 		<tbody py:choose="not history">
 			<tr py:when="1">
 			    <td colspan="5" class="plugin_error">There is no history.</td>
 			</tr>
-	        
+
 	        <tr py:when="0" py:for="(index, entry) in enumerate(history)" class="${['odd', 'even'][index % 2]}">
 				<td class="plugin_date">
                 	${entry.get_date('timestamp')}
