Utilisation de excanvas dans vigimap. Les commentaires conditionnels sont désactivés pour le moment (pas supportés par Genshi lors du parsing).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4363 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -9,7 +9,7 @@
     <meta name="version" content="${tg.config.get('version')}" />
 
     <style type="text/css">@import "${tg.url('css/reset.css')}";</style>
-    <!--[if IE]><script type="text/javascript" src="${tg.url('/js/excanvas.js')}"></script><![endif]-->
+    <script type="text/javascript" src="${tg.url('/js/libs/excanvas.js')}"></script>
     <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <style type="text/css">@import "${tg.url('css/map.css')}";</style>
     <style type="text/css">@import "${tg.url('css/ServiceElement.css')}";</style>
@@ -85,14 +85,14 @@
         <canvas>
             Your browser does not support the canvas element. Please upgrade.
         </canvas>
-        
+
         <div id="legend">
         </div>
     </div>
 
     <div id="loading">
         <img alt="loading..." src="${tg.url('images/loading.gif')}" />
-    </div>    
+    </div>
 </py:def>
 
 </html>
