--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -53,16 +53,20 @@ ${toolbar()}
     <div py:strip="True" py:if="flash" py:content="XML(flash)" />
 </py:with>
 
+<!--!
+    On utilise le traducteur de l'application ici plutôt que celui des thèmes
+    pour éviter des erreurs d'interprétation du format dans le contrôleur.
+-->
 <div style="display: none">
     ${search_form(
         search,
         child_args=dict(
             from_date=dict(
-                date_format=l_('%Y-%m-%d %I:%M:%S %p'),
+                date_format=_('%Y-%m-%d %I:%M:%S %p'),
                 calendar_lang=get_calendar_lang(),
             ),
             to_date=dict(
-                date_format=l_('%Y-%m-%d %I:%M:%S %p'),
+                date_format=_('%Y-%m-%d %I:%M:%S %p'),
                 calendar_lang=get_calendar_lang(),
             ),
         ),
