--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -18,9 +18,11 @@
         <a id="SearchLien" href="javascript:window.search_dialog.open.bind(window.search_dialog)();">
             <img src="${tg.url('/images/search.png')}" alt="Filter display" title="Filter display"/>
         </a>
+        <py:if test="tg.config.get('help_link')">
         <a href="${tg.config['help_link']}">
             <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
         </a>
+        </py:if>
         <a href="${tg.url('/logout_handler')}">
             <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
         </a>
@@ -72,7 +74,7 @@
     var vigiloLog = new Log;
     // Activation ou désactivation du log en fonction de valeur de la variable debug.
 	vigiloLog.${['disableLog', 'enableLog'][tg.config['debug']]}();
-    
+
     window.search_dialog = null;
     window.dlg_open_handler = function () { this.isOpen = true; }
     window.dlg_close_handler = function () { this.isOpen = false; }
@@ -86,7 +88,7 @@
          * déplié par Jx.Dialog. Les toggleCollapse permettent de
          * marquer le Dialog comme replié dans Jx.Dialog avant de
          * le déplier pour qu'il soit affiché correctement.
-         */ 
+         */
         window.search_dialog = new Jx.Dialog({
             id: "SearchDialog",
             label: "${l_('Search Event').encode('backslash')}",
@@ -142,7 +144,7 @@
             }
         });
         req.post({fontsize: size});
-    	
+
         vigiloLog.log("Font size set to " + size + ".");
     }
 
@@ -191,7 +193,7 @@
         });
         req.post({'theme': theme_id});
         setActiveStyleSheet(theme_name);
-        
+
         vigiloLog.log("Theme set to '" + theme_name + "'.");
     }
 
@@ -216,4 +218,3 @@
 </script>
 </py:def>
 </html>
-
