--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -29,9 +29,11 @@
                 <img src="${tg.url('/resource/qx/icon/Nuvola/22/actions/document-print.png')}"
                     alt="Print all" title="Print all visible graphs" />
             </a>
+            <py:if test="tg.config.get('help_link')">
             <a href="${tg.config['help_link']}">
                 <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
             </a>
+            </py:if>
             <a href="${tg.url('/logout_handler')}">
                 <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
             </a>
