--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -54,9 +54,11 @@
         </span>
 
         <div class="header_item">
+            <py:if test="tg.config.get('help_link')">
             <a href="${tg.config['help_link']}">
                 <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
             </a>
+            </py:if>
             <a href="${tg.url('/logout_handler')}">
                 <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
             </a>
