Suppression des informations de copyright du pied de page (ticket client2 n°38560).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4568 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/common/footer.html
+++ b/src/vigilo/themes/templates/common/footer.html
@@ -6,7 +6,7 @@
   <div class="foottext">
     <!--! @XXX Corriger les infos de copyright -->
     <p>Vigilo is an open-source monitoring solution designed for large-scale
-        system and network management. Copyright © ????-2010 </p>
+        system and network management.</p>
   </div>
   <div class="clearingdiv"></div>
 </div>
