Renommage rrdgraph -> vigirrd dans les templates de VigiGraph.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4570 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
@@ -29,7 +29,7 @@
             <img alt="${l_('Graph \'%(graph)s\' on \'%(host)s\'') % {
                     'host': host,
                     'graph': graph.name,
-                }}" src="${tg.url('/rrdgraph/%s/index' % host, {
+                }}" src="${tg.url('/vigirrd/%s/index' % host, {
                 'host_': host,
                 'graphtemplate': graph.name,
                 'start': start,
