Le bouton de login/logout des applications est désormais masqué automatiquement (supprimé du code HTML généré) dans les IHM lorsqu'une authentification externe (ex: Kerberos) est utilisée.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4600 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/master.html
+++ b/src/vigilo/themes/templates/vigiboard/master.html
@@ -18,7 +18,8 @@
   ${header()}
   <ul id="mainmenu">
     <li class="first"><a href="${tg.url('/')}" class="${('', 'active')[defined('page') and page==page=='index']}">VigiBoard</a></li>
-    <span py:if="tg.auth_stack_enabled" py:strip="True">
+    <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
+    <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
         <li py:if="not request.identity" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
         <li py:if="request.identity" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
     </span>
