--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -34,9 +34,12 @@
                 <img src="${tg.url('/images/help.png')}" alt="Help" title="Help"/>
             </a>
             </py:if>
+            <!--! On masque le bouton de login/logout si une authentification externe est utilisée. -->
+            <span py:if="tg.auth_stack_enabled and not asbool(tg.config.get('external_auth'))" py:strip="True">
             <a href="${tg.url('/logout_handler')}">
                 <img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
             </a>
+            </span>
         </div>
 
         <h1><a href="${tg.url('/')}">VigiGraph</a></h1>
